--- a/app/src/main/res/layout-land/activity_search.xml
+++ b/app/src/main/res/layout-land/activity_search.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    style="@style/InnerActivityLayoutStyle"
-    android:id="@+id/searchActivity">
+    android:id="@+id/searchActivity"
+    style="@style/InnerActivityLayoutStyle">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -26,45 +26,45 @@
             app:iconGravity="textStart" />
     </FrameLayout>
 
-        <FrameLayout
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="52dp"
+        android:orientation="vertical"
+        android:paddingStart="@dimen/padding"
+        android:paddingTop="@dimen/medium_padding"
+        android:paddingEnd="@dimen/padding"
+        android:paddingBottom="@dimen/medium_padding">
+
+        <EditText
+            android:id="@+id/editTextwather"
+            style="@style/SearchActivityTextInput"
             android:layout_width="match_parent"
-            android:layout_height="52dp"
-            android:orientation="vertical"
-            android:paddingStart="@dimen/padding"
-            android:paddingTop="@dimen/medium_padding"
-            android:paddingEnd="@dimen/padding"
-            android:paddingBottom="@dimen/medium_padding">
+            android:layout_height="36dp"
+            android:drawableStart="@drawable/icon_search_small"
+            android:drawablePadding="@dimen/medium_padding"
+            android:fontFamily="@font/ys_display_regular"
+            android:hint="@string/search_hint"
+            android:imeOptions="actionDone"
+            android:inputType="textCapWords"
+            android:maxLength="50"
+            android:maxLines="1"
+            android:paddingStart="12dp"
+            android:paddingEnd="12dp"
+            android:singleLine="true"
+            android:textAlignment="textStart"
+            android:textColor="@color/black"
+            android:textColorHint="@color/grey"
+            android:textSize="@dimen/element_text_size" />
 
-            <EditText
-                android:id="@+id/editTextwather"
-                style="@style/SearchActivityTextInput"
-                android:layout_width="match_parent"
-                android:layout_height="36dp"
-                android:drawableStart="@drawable/icon_search_small"
-                android:drawablePadding="@dimen/medium_padding"
-                android:fontFamily="@font/ys_display_regular"
-                android:hint="@string/search_hint"
-                android:imeOptions="actionDone"
-                android:inputType="textCapWords"
-                android:maxLength="50"
-                android:maxLines="1"
-                android:paddingStart="12dp"
-                android:paddingEnd="12dp"
-                android:singleLine="true"
-                android:textAlignment="textStart"
-                android:textColor="@color/black"
-                android:textColorHint="@color/grey"
-                android:textSize="@dimen/element_text_size" />
+        <ImageView
+            android:id="@+id/clearIcon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:src="@drawable/clear_button"
+            android:visibility="gone" />
 
-            <ImageView
-                android:id="@+id/clearIcon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:src="@drawable/clear_button"
-                android:visibility="gone" />
-
-        </FrameLayout>
+    </FrameLayout>
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -85,20 +85,11 @@
             android:orientation="vertical"
             android:visibility="gone">
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:src="@drawable/vector_nothing_found_light_mode" />
+            <ImageView style="@style/SearchActivityNothingFoundImagePH" />
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/padding"
-                android:fontFamily="@font/ys_display_medium"
-                android:text="Ничего не нашлось"
-                android:textSize="19dp"
-                android:textStyle="bold" />
+                style="@style/SearchActivityNothingFoundTextPH"
+                android:text="Ничего не нашлось" />
         </LinearLayout>
 
         <LinearLayout
@@ -111,11 +102,7 @@
             android:orientation="vertical"
             android:visibility="gone">
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:src="@drawable/vector_connection_error_light_mode" />
+            <ImageView style="@style/SearchActivityBadConnectionImagePH" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -124,38 +111,22 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    style="@style/SearchActivityNothingFoundTextPH"
                     android:layout_gravity="center_horizontal"
-                    android:fontFamily="@font/ys_display_medium"
-                    android:text="Проблемы со связью."
-                    android:textSize="19dp"
-                    android:textStyle="bold" />
+                    android:text="Проблемы со связью." />
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    style="@style/SearchActivityNothingFoundTextPH"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="@dimen/medium_padding"
-                    android:fontFamily="@font/ys_display_medium"
                     android:gravity="center"
-                    android:text="Загрузка не удалась. Проверьте подключение к интернету."
-                    android:textSize="19dp"
-                    android:textStyle="bold" />
+                    android:text="Загрузка не удалась. Проверьте подключение к интернету." />
             </LinearLayout>
 
             <Button xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/refreshSearchButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="24dp"
-                android:backgroundTint="@color/black"
-                android:fontFamily="@font/ys_display_medium"
-                android:text="Обновить"
-                android:textAllCaps="false"
-                app:cornerRadius="16dp"
-                app:iconTint="@color/black" />
+                style="@style/RefreshButtonStyle"
+                android:text="Обновить" />
 
         </LinearLayout>
 
