--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -87,19 +87,12 @@
             android:visibility="gone">
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:src="@drawable/vector_nothing_found_light_mode" />
+                style="@style/SearchActivityNothingFoundImagePH" />
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/padding"
-                android:fontFamily="@font/ys_display_medium"
-                android:text="Ничего не нашлось"
-                android:textSize="19dp"
-                android:textStyle="bold" />
+                style="@style/SearchActivityNothingFoundTextPH" />
+
         </LinearLayout>
 
         <LinearLayout
@@ -114,10 +107,7 @@
             android:visibility="gone">
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:src="@drawable/vector_connection_error_light_mode" />
+                style="@style/SearchActivityBadConnectionImagePH"/>
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -126,38 +116,23 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    style="@style/SearchActivityNothingFoundTextPH"
                     android:layout_gravity="center_horizontal"
-                    android:fontFamily="@font/ys_display_medium"
-                    android:text="Проблемы со связью."
-                    android:textSize="19dp"
-                    android:textStyle="bold" />
+                    android:text="Проблемы со связью."/>
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    style="@style/SearchActivityNothingFoundTextPH"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="@dimen/medium_padding"
-                    android:fontFamily="@font/ys_display_medium"
                     android:gravity="center"
-                    android:text="Загрузка не удалась. Проверьте подключение к интернету."
-                    android:textSize="19dp"
-                    android:textStyle="bold" />
+                    android:text="Загрузка не удалась. Проверьте подключение к интернету." />
+
             </LinearLayout>
 
             <Button xmlns:app="http://schemas.android.com/apk/res-auto"
+                style="@style/RefreshButtonStyle"
                 android:id="@+id/refreshSearchButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="24dp"
-                android:backgroundTint="@color/black"
-                android:fontFamily="@font/ys_display_medium"
-                android:text="Обновить"
-                android:textAllCaps="false"
-                app:cornerRadius="16dp"
-                app:iconTint="@color/black" />
+                android:text="Обновить" />
 
         </LinearLayout>
 
