--- a/app/src/main/res/layout-land/activity_search.xml
+++ b/app/src/main/res/layout-land/activity_search.xml
@@ -30,10 +30,10 @@
         android:layout_width="match_parent"
         android:layout_height="52dp"
         android:orientation="vertical"
-        android:paddingStart="@dimen/padding_16"
-        android:paddingTop="@dimen/padding_8"
-        android:paddingEnd="@dimen/padding_16"
-        android:paddingBottom="@dimen/padding_8">
+        android:paddingStart="@dimen/padding"
+        android:paddingTop="@dimen/medium_padding"
+        android:paddingEnd="@dimen/padding"
+        android:paddingBottom="@dimen/medium_padding">
 
         <EditText
             android:id="@+id/editTextwather"
@@ -41,7 +41,7 @@
             android:layout_width="match_parent"
             android:layout_height="36dp"
             android:drawableStart="@drawable/icon_search_small"
-            android:drawablePadding="@dimen/padding_8"
+            android:drawablePadding="@dimen/medium_padding"
             android:fontFamily="@font/ys_display_regular"
             android:hint="@string/search_hint"
             android:imeOptions="actionDone"
@@ -54,7 +54,7 @@
             android:textAlignment="textStart"
             android:textColor="@color/black"
             android:textColorHint="@color/grey"
-            android:textSize="@dimen/text_size_16sp" />
+            android:textSize="@dimen/element_text_size" />
 
         <ImageView
             android:id="@+id/clearIcon"
@@ -70,7 +70,7 @@
         android:id="@+id/searchResults"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/padding_16"
+        android:layout_marginTop="@dimen/padding"
         android:visibility="visible">
 
         <androidx.recyclerview.widget.RecyclerView
@@ -98,7 +98,7 @@
                 style="@style/SearchActivityNothingFoundTextPH"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/padding_16"
+                android:layout_marginTop="@dimen/padding"
                 android:text="@string/nothing_found" />
 
         </LinearLayout>
@@ -123,7 +123,7 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/padding_16"
+                android:layout_marginTop="@dimen/padding"
                 android:orientation="vertical">
 
                 <TextView
@@ -138,7 +138,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="@dimen/padding_8"
+                    android:layout_marginTop="@dimen/medium_padding"
                     android:gravity="center"
                     android:text="@string/load_failed" />
             </LinearLayout>
@@ -163,7 +163,7 @@
             android:id="@+id/trackHistory"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="@dimen/padding_16"
+            android:layout_marginTop="@dimen/padding"
             android:orientation="vertical"
             android:visibility="gone">
 
