--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/searchActivity"
-    style="@style/InnerActivityLayoutStyle"
-    android:orientation="vertical">
+    style="@style/InnerActivityLayoutStyle">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -31,10 +30,10 @@
         android:layout_width="match_parent"
         android:layout_height="52dp"
         android:orientation="vertical"
-        android:paddingStart="@dimen/padding_16"
-        android:paddingTop="@dimen/padding_8"
-        android:paddingEnd="@dimen/padding_16"
-        android:paddingBottom="@dimen/padding_8">
+        android:paddingStart="@dimen/padding"
+        android:paddingTop="@dimen/medium_padding"
+        android:paddingEnd="@dimen/padding"
+        android:paddingBottom="@dimen/medium_padding">
 
         <EditText
             android:id="@+id/editTextwather"
@@ -42,7 +41,7 @@
             android:layout_width="match_parent"
             android:layout_height="36dp"
             android:drawableStart="@drawable/icon_search_small"
-            android:drawablePadding="@dimen/padding_8"
+            android:drawablePadding="@dimen/medium_padding"
             android:fontFamily="@font/ys_display_regular"
             android:hint="@string/search_hint"
             android:imeOptions="actionDone"
@@ -55,7 +54,7 @@
             android:textAlignment="textStart"
             android:textColor="@color/black"
             android:textColorHint="@color/grey"
-            android:textSize="@dimen/text_size_16sp" />
+            android:textSize="@dimen/element_text_size" />
 
         <ImageView
             android:id="@+id/clearIcon"
@@ -71,23 +70,13 @@
         android:id="@+id/searchResults"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/padding_16"
+        android:layout_marginTop="@dimen/padding"
         android:visibility="gone">
-
-        <ProgressBar
-            android:id="@+id/progressBar"
-            android:layout_width="44dp"
-            android:layout_height="44dp"
-            android:layout_gravity="center"
-            android:indeterminateTint="@color/blue"
-            android:visibility="gone" />
-
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerSearch"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="gone"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
         <LinearLayout
@@ -109,7 +98,7 @@
                 style="@style/SearchActivityNothingFoundTextPH"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/padding_16"
+                android:layout_marginTop="@dimen/padding"
                 android:text="@string/nothing_found" />
 
         </LinearLayout>
@@ -134,7 +123,7 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/padding_16"
+                android:layout_marginTop="@dimen/padding"
                 android:orientation="vertical">
 
                 <TextView
@@ -149,7 +138,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="@dimen/padding_8"
+                    android:layout_marginTop="@dimen/medium_padding"
                     android:gravity="center"
                     android:text="@string/load_failed" />
             </LinearLayout>
@@ -167,47 +156,47 @@
 
     </FrameLayout>
 
-    <androidx.core.widget.NestedScrollView
+    <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <LinearLayout
-            android:id="@+id/trackHistory"
+    <LinearLayout
+        android:id="@+id/trackHistory"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/padding"
+        android:orientation="vertical"
+        android:visibility="gone">
+
+        <TextView
+            style="@style/SearchHistoryHeader"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="@dimen/padding_16"
-            android:orientation="vertical"
-            android:visibility="visible">
+            android:layout_height="52dp"
+            android:fontFamily="@font/ys_display_medium"
+            android:gravity="center"
+            android:text="@string/you_searched"
+            android:textSize="19sp"
+            android:textStyle="bold" />
 
-            <TextView
-                style="@style/SearchHistoryHeader"
-                android:layout_width="match_parent"
-                android:layout_height="52dp"
-                android:fontFamily="@font/ys_display_medium"
-                android:gravity="center"
-                android:text="@string/you_searched"
-                android:textSize="19sp"
-                android:textStyle="bold" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/trackHistoryRV"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/padding_8"
+            android:nestedScrollingEnabled="false"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/trackHistoryRV"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/padding_8"
-                android:nestedScrollingEnabled="false"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+        <Button xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/clearHistorySearchButton"
+            style="@style/RefreshButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/padding_24"
+            android:layout_marginBottom="@dimen/padding_24"
+            app:cornerRadius="54dp"
+            android:text="@string/clear_history"
+            android:layout_gravity="center_horizontal"/>
 
-            <Button xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/clearHistorySearchButton"
-                style="@style/RefreshButtonStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="@dimen/padding_24"
-                android:layout_marginBottom="@dimen/padding_24"
-                android:text="@string/clear_history"
-                app:cornerRadius="54dp" />
-
-        </LinearLayout>
+    </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 </LinearLayout>
