--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,5 @@
     <color name="blue_light">#9FBBF3</color>
     <color name="grey">#AEAFB4</color>
     <color name="grey_pale">#E6E8EB</color>
-    <color name="custom_black">#1A1B22</color>
+    <color name="mainScreenButtonTextColor">#1A1B22</color>
 </resources>
