--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <style name="TitleTextStyle">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">start</item>
-        <item name="android:textSize">@dimen/text_size_22sp</item>
+        <item name="android:textSize">@dimen/primary_text_size</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:fontFamily">@font/ys_text_medium</item>
         <item name="android:textFontWeight">500</item>
@@ -16,7 +15,7 @@
         <item name="android:layout_height">match_parent</item>
         <item name="android:background">@color/blue</item>
         <item name="android:orientation">vertical</item>
-    </style>
+        </style>
 
     <style name="MainActivityButtonStyle" parent="Widget.MaterialComponents.Button.UnelevatedButton">
         <item name="android:layout_width">match_parent</item>
@@ -26,8 +25,8 @@
         <item name="android:backgroundTint">@color/white</item>
         <item name="android:layout_gravity">center</item>
         <item name="android:textAllCaps">false</item>
-        <item name="android:textColor">@color/custom_black</item>
-        <item name="android:textSize">@dimen/text_size_22sp</item>
+        <item name="android:textColor">@color/mainScreenButtonTextColor</item>
+        <item name="android:textSize">@dimen/primary_text_size</item>
         <item name="android:fontFamily">@font/ys_display_medium</item>
         <item name="android:textFontWeight">500</item>
         <item name="cornerRadius">16dp</item>
@@ -43,7 +42,7 @@
 
     <style name="InnerActivityHeaderFrameLayout">
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_height">56dp</item>
         <item name="android:layout_marginTop">4dp</item>
         <item name="android:layout_marginBottom">4dp</item>
         <item name="android:layout_marginStart">4dp</item>
@@ -54,9 +53,9 @@
     <style name="SettingsActivityButtonFrame">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">64dp</item>
-        <item name="android:paddingLeft">@dimen/padding_16</item>
+        <item name="android:paddingLeft">@dimen/padding</item>
         <item name="android:paddingTop">24dp</item>
-        <item name="android:paddingRight">@dimen/padding_16</item>
+        <item name="android:paddingRight">@dimen/padding</item>
     </style>
 
     <style name="SettingsActivityButtonText">
@@ -64,7 +63,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">start</item>
         <item name="android:textColor">@color/black</item>
-        <item name="android:textSize">@dimen/text_size_16sp</item>
+        <item name="android:textSize">@dimen/element_text_size</item>
         <item name="android:fontFamily">@font/ys_display_regular</item>
         <item name="android:textFontWeight">400</item>
     </style>
@@ -142,38 +141,6 @@
     <style name="SearchHistoryHeader">
         <item name="android:fontFamily">@font/ys_display_medium</item>
         <item name="android:textColor">@color/black</item>
-    </style>
-
-    <style name="PlayerTrackBackGround">
-        <item name="backgroundTint">@color/white</item>
-    </style>
-
-    <style name="PlayerTrackButtonBack">
-        <item name="android:src">@drawable/vector_arrow_back</item>
-        <item name="android:backgroundTint">@android:color/transparent</item>
-    </style>
-
-    <style name="PlayerTrackButtonPlay">
-        <item name="android:background">@drawable/play_button_selector</item>
-
-    </style>
-
-    <style name="PlayerTrackButtonaAddToTrackList">
-        <item name="android:src">@drawable/vector_add_to_track_list</item>
-        <item name="android:backgroundTint">@android:color/transparent</item>
-    </style>
-
-    <style name="PlayerTrackButtonaAddToFav">
-        <item name="android:src">@drawable/vector_add_to_favorites</item>
-        <item name="android:backgroundTint">@android:color/transparent</item>
-    </style>
-
-    <style name="PlayerTrackText">
-        <item name="android:textColor">@color/custom_black</item>
-    </style>
-
-    <style name="PlayerProgressTrackText">
-        <item name="android:textColor">@color/custom_black</item>
     </style>
 
 
