--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -154,7 +154,9 @@
     </style>
 
     <style name="PlayerTrackButtonPlay">
-        <item name="android:background">@drawable/play_button_selector</item>
+        <item name="android:background">@drawable/play_button_background_selector</item>
+        <item name="android:foreground">@drawable/play_button_image_selector</item>
+<!--        android:foreground="@drawable/play_button_image_selector"-->
 
     </style>
 
