--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -182,5 +182,11 @@
         <item name="android:background">@color/white</item>
     </style>
 
+    <style name="ToolbarHeader">
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">@dimen/text_size_22sp</item>
+    </style>
 
 </resources>
