--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,6 +7,7 @@
     <dimen name="padding_16">16dp</dimen>
     <dimen name="padding_24">24dp</dimen>
     <dimen name="padding_30">30dp</dimen>
+    <dimen name="padding_46">46dp</dimen>
     <dimen name="padding_104">104dp</dimen>
     <dimen name="button_width">328dp</dimen>
     <dimen name="button_high">220dp</dimen>
